[package]
name = "benfred-read-process-memory"
version = "0.2.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "MIT"
description = "Read memory from another process."
homepage = "https://github.com/benfred/read-process-memory"
repository = "https://github.com/benfred/read-process-memory"

[dependencies]
libc = "0.2.34"
log = "0.4.6"

[target.'cfg(target_os="macos")'.dependencies]
mach = "0.1.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[target.'cfg(target_os="macos")'.dev-dependencies]
spawn-task-port = "0.1"
